--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"  android:layout_height="wrap_content" android:scrollbars="vertical"
     android:orientation="vertical">
     <LinearLayout android:layout_width="fill_parent" android:layout_height="45sp" android:orientation="horizontal" android:background="@color/pageHeadingBack">
@@ -11,12 +12,25 @@
     <LinearLayout android:id="@+id/secVill" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
 
         <TextView android:id="@+id/VlblVill" android:text="খানা নম্বর" android:layout_width="100sp" android:layout_height="wrap_content" android:textSize="20sp" />
-        <EditText android:id="@+id/txtVill" android:maxLength="3" android:layout_width="60sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
-        <EditText android:id="@+id/txtBari" android:maxLength="4" android:layout_width="60sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
-        <EditText android:id="@+id/txtHH" android:maxLength="2" android:layout_width="50sp" android:inputType="text" android:layout_height="wrap_content" style="@style/customEdit" android:layout_marginRight="10sp" android:textSize="20sp" />
 
+        <TextView android:id="@+id/lblHousehold" android:textSize="20sp" android:layout_width="160sp" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"
+            android:textColor="@android:color/holo_red_light" />
+        <TextView android:text="গ্রাম" android:layout_column="0" android:layout_width="80sp" android:textSize="20sp" android:layout_height="wrap_content"/>
+        <TextView android:id="@+id/lblVillName" android:textSize="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"
+            android:textColor="@android:color/holo_red_light" />
     </LinearLayout>
     <View android:id="@+id/lineVill" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
+    <LinearLayout android:background="#F3F3F3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
+        <TextView android:text="বাড়ি" android:layout_column="0" android:layout_width="100sp" android:textSize="20sp" android:layout_height="wrap_content"/>
+        <TextView android:id="@+id/lblBariName" android:textSize="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"
+            android:textColor="@android:color/holo_red_light" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dip"
+        android:background="#CCCCCC" />
 
     <LinearLayout android:id="@+id/secMenu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <Button android:id="@+id/btnMemberName" android:layout_weight="1" android:layout_width="wrap_content"  android:layout_height="40sp" android:layout_marginBottom="10sp" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:layout_marginTop="5dip" android:background="@drawable/button_style_blue" android:text=" Add Member Name " android:textColor="#FFFFFF" android:textSize="18sp" />
