--- a/app/src/main/res/layout/member_list.xml
+++ b/app/src/main/res/layout/member_list.xml
@@ -14,23 +14,22 @@
         <TextView android:id="@+id/VlblVill" android:text="খানা নম্বর" android:layout_width="100sp" android:layout_height="wrap_content" android:textSize="20sp" />
 
         <TextView android:id="@+id/lblHousehold" android:textSize="20sp" android:layout_width="160sp" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"
-            android:textColor="@android:color/holo_red_light" />
+            android:textColor="@color/Heading" />
         <TextView android:text="গ্রাম" android:layout_column="0" android:layout_width="80sp" android:textSize="20sp" android:layout_height="wrap_content"/>
+
         <TextView android:id="@+id/lblVillName" android:textSize="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"
-            android:textColor="@android:color/holo_red_light" />
+            android:textColor="@color/Heading" />
     </LinearLayout>
     <View android:id="@+id/lineVill" android:layout_height="1dip" android:layout_width="fill_parent" android:background="#CCCCCC" />
     <LinearLayout android:background="#F3F3F3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <TextView android:text="বাড়ি" android:layout_column="0" android:layout_width="100sp" android:textSize="20sp" android:layout_height="wrap_content"/>
         <TextView android:id="@+id/lblBariName" android:textSize="20sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_column="1" android:gravity="left"
-            android:textColor="@android:color/holo_red_light" />
+            android:textColor="@color/Heading" />
 
     </LinearLayout>
 
     <View
-        android:layout_width="wrap_content"
-        android:layout_height="1dip"
-        android:background="#CCCCCC" />
+        android:layout_width="wrap_content" android:layout_height="1dip" android:background="#CCCCCC" />
 
     <LinearLayout android:id="@+id/secMenu" android:layout_width="fill_parent" android:layout_height="wrap_content" android:orientation="horizontal" style="@style/rowStyle0">
         <Button android:id="@+id/btnMemberName" android:layout_weight="1" android:layout_width="wrap_content"  android:layout_height="40sp" android:layout_marginBottom="10sp" android:layout_marginLeft="20sp" android:layout_marginRight="20sp" android:layout_marginTop="5dip" android:background="@drawable/button_style_blue" android:text=" Add Member Name " android:textColor="#FFFFFF" android:textSize="18sp" />
